test/implicitDup24.slq

def main(){
	x:=H(0);
	y:=dup(x);
	k:=(y,dup(y),dup(y),x);
	return (k,y); /// error
}
